-fixed horizontal scroll issue on blog page -removed extra space from blog page -avoid delay to redirect to blog page

--- a/src/styles/global/layout/_basePage.scss
+++ b/src/styles/global/layout/_basePage.scss
@@ -259,3 +259,6 @@ div[class*="CarouselWithForm_carouselForm_"] {
   }
 }
 
+.Toastify {
+  padding: 0;
+}
