--- a/src/styles/layouts/templates/BlogPage.scss
+++ b/src/styles/layouts/templates/BlogPage.scss
@@ -2,7 +2,7 @@
 
 main {
   position: relative;
-  z-index: 100;
+  // z-index: 100;
 }
 
 .blog {
